[project]
name = "tool-call-demo"
version = "0.1.0"
description = "Basic tool calling demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
biopython = [
    "biopython==1.86",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
